--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "blear.core.local-storage",
-  "version": "1.0.0",
-  "description": "local storage",
+  "version": "1.0.1",
+  "description": "模块废弃，请使用 blear.core.storage 代替",
   "scripts": {
     "live": "browser-sync start --config bs-config.js",
     "test": "node ./node_modules/.bin/karma start karma.conf.js --single-run"
